--- a/index.css
+++ b/index.css
@@ -122,7 +122,7 @@ output{
 }
 #panel {
 background-color: #333;
-    color: #777;
+    color: #888;
     height: 85%;
     border-radius: 8px;
     /* border: 1px solid yellow; */
@@ -131,31 +131,55 @@ background-color: #333;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 0.5em;
+    background-image: url(confetti.gif);
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: 80%;
 }
-#panel.on{
-    opacity: 1;
-}
-#start{
-    height: 4em;
-    width: 4em;
-    /* border: 1px solid blue; */
-    border-radius: 8px;
-    margin: 2em auto;
-    display: block;
-    background-color: #333;
-    border: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#start > div {
-    height: 50%;
-    width: 50%;
-    border: 2px solid #fff;
-    border-radius: 50%;
-}
-#flag {
-    background-image: url('nigerian_flag.png');
-    width: 4em;
-    height: 2em;
+    #panel.on{
+        opacity: 1;
+    }
+    #panel.bgi{
+        background-image: url('confetti.gif');
+    }
+    #start{
+        height: 4em;
+        width: 4em;
+        /* border: 1px solid blue; */
+        border-radius: 8px;
+        margin: 2em auto;
+        display: block;
+        background-color: #333;
+        border: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #start > div {
+        height: 50%;
+        width: 50%;
+        border: 2px solid #fff;
+        border-radius: 50%;
+    }
+    #flag {
+        background-image: url('nigerian_flag.png');
+        background-repeat: no-repeat;
+        background-size: 90%;
+        background-position: center;
+        width: 2em;
+        height: 1em;
+    }
+    #username{
+        /* border: 1px solid white; */
+        font-size: 150%;
+    }
+    #age{
+        /* border: 1px solid white; */
+    font-size: 400%;
+    margin: 1.5em 0em;
+    background-color: #e35;
+    background-image: linear-gradient(to right, #e35 70%, #666 0%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
