--- a/index.css
+++ b/index.css
@@ -136,6 +136,7 @@ background-color: #333;
     background-repeat: no-repeat;
     background-position: top;
     background-size: 80%;
+    position: relative;
 }
     #panel.on{
         opacity: 1;
@@ -143,6 +144,23 @@ background-color: #333;
     #panel.bgi{
         background-image: url('confetti.gif');
     }
+    #panel > a{
+        text-decoration: none;
+        color : #f3f3f3;
+        padding: .5em;
+        border-radius: 7px;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        margin: 1em;
+        background-color: #444;
+        font-weight:700;
+        transition: background-color .3s;
+       }
+       #panel > a:hover {
+        background-color: #222;
+
+       }
     #start{
         height: 4em;
         width: 4em;
